[package]
name = "inti25_solana_lib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Rust example by inti25"
documentation = "https://github.com/inti25/inti25_solana_lib"
repository = "https://github.com/inti25/inti25_solana_lib"

homepage = "https://github.com/inti25/inti25_rust_lib1"
keywords = ["science", "mathematics", "ai", "hpc"]
license = "Apache-2.0"

[dependencies]
inti25_rust_lib1 = "0.0.1"